# dnaMatcher

./: .env.example  .gitignore  AGENTS.md  main.py  pyproject.toml  render.yaml  requirements.txt
.claude/: .10x-cli-manifest.json
.github/workflows/: ci.yml  keep-alive.yml
context/archive/2026-05-25-auth-scaffold/: change.md  plan-brief.md  plan.md
context/archive/2026-05-25-database-schema/: change.md
context/archive/2026-05-29-user-authentication/: change.md
context/archive/2026-05-30-dna-comparison/: change.md  plan-brief.md
context/archive/2026-06-02-phasing-ancestor-annotation/: change.md
context/archive/2026-06-03-ancestor-management/: change.md
context/archive/2026-06-03-segment-cm-density/: change.md  plan-brief.md  plan.md
context/deployment/: deploy-plan.md
context/foundation/: health-check.md  infrastructure.md  prd.md  roadmap.md  shape-notes.md  tech-stack.md  test-plan.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/lib/: api.ts  (+2 more)
src/auth/: client.py  dependencies.py  models.py
src/dna/: algorithm.py  genome_tools.py  models.py  parser.py  segment_matcher.py
src/routers/: ancestors.py  annotations.py  comparisons.py  me.py
supabase/migrations/: 001_initial_schema.sql  002_comparison_results_columns.sql  003_comparisons_name_column.sql  004_ancestor_annotations_unique.sql  005_segment_density_column.sql  006_ancestors_table.sql  007_ancestor_annotations_strand_in_unique.sql
tests/: conftest.py  test_ancestors_api.py  test_annotations_api.py  test_api_security.py  test_auth.py  test_comparisons_api.py  test_cors.py  test_dna_algorithm.py  test_dna_parser.py  test_smoke.py
(+85 files in other folders)
